--- a/service-admin/web/templates/default.layout.gohtml
+++ b/service-admin/web/templates/default.layout.gohtml
@@ -38,7 +38,7 @@
 
       <footer class="govuk-footer" role="contentinfo"> </footer>
 
-      <script src="/javascript/all.js"></script>
+      <script src="/javascript/main.js"></script>
     </body>
   </html>
 {{ end }}
