--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -23,8 +23,7 @@
 
                 <div class="govuk-grid-column-two-thirds">
                     {% if feature_enabled("instructions_and_preferences") %}
-                        <p class="govuk-body">{% trans %}If an <abbr
-                                    title="lasting power of attorney">LPA</abbr> has instructions or preferences we show a scanned image in the LPA summary.{% endtrans %}
+                        <p class="govuk-body">{% trans %}If an <abbr title="lasting power of attorney">LPA</abbr> has instructions or preferences we show a scanned image in the LPA summary.{% endtrans %}
                         </p>
                         <p class="govuk-body">{% trans %}This scanned image is also shown to anyone you give an access code to. Please check that the scanned image is readable before giving an access code to organisations.{% endtrans %}</p>
                         <p class="govuk-body">{% trans %}Organisations may still ask to see the paper LPA if they would like to check anything.{% endtrans %}</p>
@@ -37,6 +36,7 @@
                                     title="lasting power of attorney">LPA</abbr> so that they can find out what the instructions or preferences are.{% endtrans %}
                         </p>
                     {% endif %}
+
                     <p class="govuk-body">{% trans %}On most LPAs, you’ll find the instructions and preferences in section 7.{% endtrans %}</p>
                     <p class="govuk-body">{% trans %}On some LPAs made in or before 2015, instructions and preferences are called ‘restrictions and conditions’. You’ll find them on page 9 of the
                             <abbr title="lasting power of attorney">LPA</abbr>.{% endtrans %}</p>
