Uml 2881 remove references to ip (#2264)
* removed content from dashboard behind flag

* amended welsh translations

* removed content from lpa create viewer code

* removed content from check access codes

* amended ip content

* remove content from LPA summary behind flag

* content removed from organisation create access code page

* amended behat test

* removed surplus .pot file

--- a/service-front/app/src/Actor/templates/actor/lpa-show-viewercode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-show-viewercode.html.twig
@@ -52,29 +52,29 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
-
-                    <div class="govuk-warning-text">
-                        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                        <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                        {% if is_donor_signature_date_too_old(lpa) %}
-                            <p class="govuk-body"><strong class="govuk-warning-text__text">
-                                    {% trans %}If there are instructions or preferences on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
-                                </strong></p>
-                        {% elseif lpa.applicationHasRestrictions and lpa.applicationHasGuidance %}
-                            <p class="govuk-body"><strong class="govuk-warning-text__text">
-                                    {% trans %}As there are instructions and preferences on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
-                                </strong></p>
-                        {% elseif lpa.applicationHasRestrictions %}
-                            <p class="govuk-body"><strong class="govuk-warning-text__text">
-                                    {% trans %}As there are instructions on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
-                                </strong></p>
-                        {% elseif lpa.applicationHasGuidance %}
-                            <p class="govuk-body"><strong class="govuk-warning-text__text">
-                                    {% trans %}As there are preferences on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
-                                </strong></p>
-                        {% endif %}
-                        </strong>
-                    </div>
+                    {% if not feature_enabled("instructions_and_preferences") %}
+                        <div class="govuk-warning-text">
+                            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            {% if is_donor_signature_date_too_old(lpa) %}
+                                <p class="govuk-body"><strong class="govuk-warning-text__text">
+                                        {% trans %}If there are instructions or preferences on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
+                                    </strong></p>
+                            {% elseif lpa.applicationHasRestrictions and lpa.applicationHasGuidance %}
+                                <p class="govuk-body"><strong class="govuk-warning-text__text">
+                                        {% trans %}As there are instructions and preferences on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
+                                    </strong></p>
+                            {% elseif lpa.applicationHasRestrictions %}
+                                <p class="govuk-body"><strong class="govuk-warning-text__text">
+                                        {% trans %}As there are instructions on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
+                                    </strong></p>
+                            {% elseif lpa.applicationHasGuidance %}
+                                <p class="govuk-body"><strong class="govuk-warning-text__text">
+                                        {% trans %}As there are preferences on this LPA, you may also be asked to show the paper LPA.{% endtrans %}
+                                    </strong></p>
+                            {% endif %}
+                        </div>
+                    {% endif %}
 
                     <h2 class="govuk-body-l govuk-!-font-weight-bold">{% trans %}What to do next{% endtrans %}</h2>
 
