Welsh translations added

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -115,9 +115,7 @@
                     </h2>
 
                     {% if
-                        feature_enabled("instructions_and_preferences")
-                        and (lpa.applicationHasGuidance or lpa.applicationHasInstructions)
-                    %}
+                        feature_enabled('instructions_and_preferences') and (lpa.applicationHasGuidance or lpa.applicationHasInstructions)%}
                         {# TODO - Waiting for "severance" data to be available from Sirius / API #}
 
                         <div class="govuk-warning-text">
@@ -126,7 +124,7 @@
                                 <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
                                 {% trans %}
                                     Some words in the instructions and or preferences have been removed by the court of protection.
-                                    We cannot show this detail online. organisations may ask to see the paper <abbr title="lasting power of attorney">LPA</abbr> so that they can find out which words have been removed.
+                                    We cannot show this detail online. Organisations may ask to see the paper <abbr title="lasting power of attorney">LPA</abbr> so that they can find out which words have been removed.
                                 {% endtrans %}
                             </strong>
                         </div>
