--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -110,19 +110,21 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
                     <h2 class="govuk-heading-l">{% trans %}LPA details{% endtrans %}</h2>
-                    {% if
-                        (true or feature_enabled('instructions_and_preferences')) and (lpa.applicationHasGuidance or lpa.applicationHasInstructions)
-                    %}
-                        <div class="govuk-warning-text">
-                            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                            <strong class="govuk-warning-text__text">
-                                <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                                {% trans %}
-                                    Some words in the instructions and or preferences have been removed by the court of protection.
-                                    To check which words have been removed, please ask to see the paper <abbr title="lasting power of attorney">LPA</abbr> or the court order.
-                                {% endtrans %}
-                            </strong>
-                        </div>
+
+                    {% if feature_enabled('instructions_and_preferences') %}
+                        {% if (lpa.applicationHasGuidance or lpa.applicationHasInstructions)  and lpa.hasSeveranceWarning %}
+                            <div class="govuk-warning-text">
+                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                                <strong class="govuk-warning-text__text">
+                                    <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                                    {% trans %}
+                                        Some words in the instructions and or preferences have been removed by the court of protection.
+                                        To check which words have been removed, please ask to see the paper <abbr
+                                            title="lasting power of attorney">LPA</abbr> or the court order.
+                                    {% endtrans %}
+                                </strong>
+                            </div>
+                        {% endif %}
                     {% endif %}
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
