Show instruction and preference images to viewers

--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -110,8 +110,16 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
                     <h2 class="govuk-heading-l">{% trans %}LPA details{% endtrans %}</h2>
+                    {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
+
+                    {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
+                        <div class="govuk-inset-text">
+                            {% trans %}If any scanned images are not readable, ask the person who gave you the access
+                                code to show you the paper LPA{% endtrans %}
+                        </div>
+                    {% endif %}
+
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
-                        {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">{% trans %}Date summary viewed{% endtrans %}</dt>
                             <dd class="govuk-summary-list__value">{{ lpa_date('today') }}</dd>
@@ -141,4 +149,3 @@
         </div>
     </main>
 </div>
-
