--- a/service-front/web/src/stylesheets/lpa.scss
+++ b/service-front/web/src/stylesheets/lpa.scss
@@ -20,3 +20,4 @@
 @import 'lpa-ticket-panel';
 @import 'govuk-list';
 @import 'govuk-accordion';
+@import 'lpa-instructions-and-preferences-images';
