--- a/service-front/app/src/Actor/templates/actor/actor-accessibility-statement.html.twig
+++ b/service-front/app/src/Actor/templates/actor/actor-accessibility-statement.html.twig
@@ -71,6 +71,8 @@
                         {% trans %}The Office of the Public Guardian is committed to making its online services accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.{% endtrans %}
                     </p>
 
+                    <h2 class="govuk-heading-m">{% trans %}Compliance status{% endtrans %}</h2>
+
                     <p class="govuk-body">
                         {% trans %}This service is partially compliant with the <a class="govuk-link" href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines version 2.1</a> AA standard, due to the non-compliances listed below.{% endtrans %}
                     </p>
@@ -84,15 +86,11 @@
                     <h2 class="govuk-heading-m">{% trans %}Non compliance with the accessibility regulations{% endtrans %}</h2>
 
                     <p class="govuk-body">
-                        {% trans %}Some semantic elements were implemented in a way that did not convey the relationships within the page. This fails WCAG 2.1 success criteria 1.3.1 (Info and Relationships).{% endtrans %}
+                        {% trans %}Some images do not have a text alternative, so people using a screen reader cannot access the information. This fails WCAG 2.1 success criterion 1.1.1 (non-text content).{% endtrans %}
                     </p>
 
                     <p class="govuk-body">
-                        {% trans %}The role of some components was not correctly determinable. This fails WCAG 2.1 success criteria 4.1.2 (Name, Role, Value) and 1.3.1 (Info and Relationships).{% endtrans %}
-                    </p>
-
-                    <p class="govuk-body">
-                        {% trans with {"%date%": lpa_date('2021-12-31')} %}We’ll fix all the accessibility issues we’ve found by %date%.{% endtrans %}
+                        {% trans %}Some of the images provided are extractions from original paper documents. We can not provide a text alternative either via a person or OCR technology as due to the legal nature of the content this needs to be 100% accurate to the intent of the original document.{% endtrans %}
                     </p>
 
                     <h2 class="govuk-heading-m">{% trans %}Disproportionate burden{% endtrans %}</h2>
@@ -110,7 +108,7 @@
                     </p>
 
                     <p class="govuk-body">
-                        {% trans %}This service was last tested on 4 June 2020. The test was carried out by Digital Accessibility Centre (DAC).{% endtrans %}
+                        {% trans %}This service was last tested on 22 April 2022. The test was carried out by Digital Accessibility Centre (DAC).{% endtrans %}
                     </p>
 
                 </div>
