--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -110,7 +110,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
                     <h2 class="govuk-heading-l">{% trans %}LPA details{% endtrans %}</h2>
-                    {% if feature_enabled("instructions_and_preferences") %}
+{#                    {% if feature_enabled("instructions_and_preferences") %}#}
                         {% if (lpa.applicationHasGuidance or lpa.applicationHasRestrictions) and (lpa.registrationDate < date('2019-01-01')) %}
                             <div class="govuk-warning-text">
                                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -123,7 +123,7 @@
                                 </strong>
                             </div>
                         {% endif %}
-                    {% endif %}
+{#                    {% endif %}#}
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
                         {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
                         <div class="govuk-summary-list__row">
