--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -115,7 +115,7 @@
                     <h2 class="govuk-heading-l">
                         {% trans %}<abbr title="lasting power of attorney">LPA</abbr> details{% endtrans %}
                     </h2>
-                    {% if feature_enabled("instructions_and_preferences") %}
+{#                    {% if feature_enabled("instructions_and_preferences") %}#}
                         {% if (lpa.applicationHasGuidance or lpa.applicationHasRestrictions) and (lpa.registrationDate < date('2019-01-01')) %}
                             <div class="govuk-warning-text">
                                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -128,7 +128,7 @@
                                 </strong>
                             </div>
                         {% endif %}
-                    {% endif %}
+{#                    {% endif %}#}
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
                         {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
                     </dl>
