--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -116,7 +116,7 @@
                                 <strong class="govuk-warning-text__text">
                                     <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
                                     {% trans %}
-                                        Some words in these instructions or preferences may have been removed by the court of protection. If you need to check this, please see the paper
+                                        Some words in these instructions or preferences may have been removed by the Court of Protection. If you need to check this, please see the paper
                                         <abbr title="lasting power of attorney">LPA</abbr>.
                                     {% endtrans %}
                                 </strong>
